--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Press r to restart and regrow the rose
+		    <h4> Press r to restart and regrow the rose</h4>
 	    </footer>
 	</body>
 </html>
