--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>Click to grow the rose and press r to restart</h1>
+			<h1>Click to grow the rose</h1>
 		</header>
 			<section id="content">
 				<canvas id="OriginalFractal" data-processing-sources="OriginalFractal.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    <h4> Press r to restart and regrow the rose</h4>
+		    Press r to restart and regrow the rose
 	    </footer>
 	</body>
 </html>
